--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
   "name": "URL Grabber",
-  "manifest_version": 2,
-  "description": "Fetch URLs",
-  "version": "2.1.0",
-  "permissions": ["activeTab", "<all_urls>"],
-  "browser_action": {
+  "manifest_version": 3,
+  "description": "An extension that grabs and send URL to database",
+  "version": "1.3.0",
+  "author": "Anant Dubey",
+  "permissions": ["activeTab"],
+  "host_permissions": ["<all_urls>"],
+  "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
-    }
+    "default_title": "URL Grabber",
+    "default_icon": "icon128.png"
   },
   "icons": {
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
+    "128": "icon128.png"
   }
 }
