--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "An extension that grabs and sends URLs to the database",
   "version": "1.5.0",
   "author": "Anant Dubey",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "storage"],
   "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html",
@@ -16,7 +16,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["*://revisio.vercel.app/*"],
       "js": ["contentScript.js"],
       "run_at": "document_end"
     }
